--- a/src/app/pages/register/register.scss
+++ b/src/app/pages/register/register.scss
@@ -243,6 +243,8 @@
 
 		&:hover {
 			color: $light-blue;
+			font-weight: 700;
+			
 		}
 	}
 }
